tests/NormalTests/paczka1/small_fuzzy/77722182.err
Error in line 10: iHRni S625 10,13
Error in line 7: WuqH9MXB S625 41,5
